--- a/TableViewMyPlaces/Base.lproj/Main.storyboard
+++ b/TableViewMyPlaces/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--My Places-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TableViewMyPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,17 +16,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c0X-T6-AgN">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c0X-T6-AgN">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="lLu-pU-7UK">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="lLu-pU-7UK" customClass="CustomTableViewCell" customModule="TableViewMyPlaces" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lLu-pU-7UK" id="5Vx-Xt-YTw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P3w-TL-1jD">
+                                                    <rect key="frame" x="15" y="10" width="65" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="65" id="QFV-kx-ZJ3"/>
+                                                        <constraint firstAttribute="height" constant="65" id="jMx-YA-7ZB"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ox-a7-eyM">
+                                                    <rect key="frame" x="95" y="9" width="299" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="q47-2h-ppJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ko-Zt-JPp">
+                                                    <rect key="frame" x="95" y="35" width="315" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="18" id="Zdk-cN-cIV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjj-2S-r4A">
+                                                    <rect key="frame" x="95" y="54" width="299" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="rMm-R8-fYI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="P3w-TL-1jD" firstAttribute="centerY" secondItem="5Vx-Xt-YTw" secondAttribute="centerY" id="0tD-Vn-VAj"/>
+                                                <constraint firstAttribute="bottom" secondItem="sjj-2S-r4A" secondAttribute="bottom" constant="10" id="5yE-b7-IlX"/>
+                                                <constraint firstItem="sjj-2S-r4A" firstAttribute="leading" secondItem="P3w-TL-1jD" secondAttribute="trailing" constant="15" id="9EI-jO-ybU"/>
+                                                <constraint firstAttribute="trailing" secondItem="6Ox-a7-eyM" secondAttribute="trailing" constant="20" symbolic="YES" id="CjY-nc-DSH"/>
+                                                <constraint firstItem="P3w-TL-1jD" firstAttribute="leading" secondItem="5Vx-Xt-YTw" secondAttribute="leading" constant="15" id="FO9-f6-LXW"/>
+                                                <constraint firstAttribute="trailing" secondItem="sjj-2S-r4A" secondAttribute="trailing" constant="20" symbolic="YES" id="GXj-aA-SL7"/>
+                                                <constraint firstItem="6ko-Zt-JPp" firstAttribute="top" secondItem="6Ox-a7-eyM" secondAttribute="bottom" constant="5" id="Jac-mq-m8t"/>
+                                                <constraint firstItem="6Ox-a7-eyM" firstAttribute="leading" secondItem="P3w-TL-1jD" secondAttribute="trailing" constant="15" id="VcH-rE-4p6"/>
+                                                <constraint firstItem="sjj-2S-r4A" firstAttribute="top" secondItem="6ko-Zt-JPp" secondAttribute="bottom" constant="1" id="Xgf-M0-dcK"/>
+                                                <constraint firstItem="6ko-Zt-JPp" firstAttribute="trailing" secondItem="5Vx-Xt-YTw" secondAttribute="trailingMargin" constant="16" id="dx7-PH-bK5"/>
+                                                <constraint firstItem="6Ox-a7-eyM" firstAttribute="top" secondItem="5Vx-Xt-YTw" secondAttribute="top" constant="9" id="eGN-jL-qWS"/>
+                                                <constraint firstItem="6ko-Zt-JPp" firstAttribute="leading" secondItem="P3w-TL-1jD" secondAttribute="trailing" constant="15" id="wEp-pS-eS1"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagePlaces" destination="P3w-TL-1jD" id="EZx-hk-HyN"/>
+                                            <outlet property="lblLocation" destination="6ko-Zt-JPp" id="A68-nE-aKJ"/>
+                                            <outlet property="lblName" destination="6Ox-a7-eyM" id="g5b-rp-4JH"/>
+                                            <outlet property="lblType" destination="sjj-2S-r4A" id="9wG-D6-kIe"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -44,7 +100,7 @@
                             <constraint firstItem="c0X-T6-AgN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mY0-FF-NGZ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Main View Controller" id="rOf-5T-ORR"/>
+                    <navigationItem key="navigationItem" title="My Places" id="rOf-5T-ORR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -58,6 +114,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eOQ-H4-gd2">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="24"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
